--- a/PI2Teruel/web/apresentacao.html
+++ b/PI2Teruel/web/apresentacao.html
@@ -13,6 +13,7 @@
             Eu estous a anos tentando capturar os malditos Smurfs, e agora consegui finalmente alguns para vende-los, eles valem ouro, sao bixinhos azuis, pequenos
             e feio pra caramba, entao comprem ele para me dar dinheiro logo, antes que eles virem raçao de Cruel HAHAHAHAHAHA.
         </p>
+        <p><img src="images/gargamel.jpg" /></p>
         <p>
             agora uma cançao: 
         </p>
